# torch_yolo

./: .coverage  .gitignore  LICENSE.txt  README.md  pyproject.toml
configs/: sample_config.json
examples/: example_eval.py  example_inference.py  example_train.py  manual_prof.py
sample_data/: dataset.yaml
sample_data/labels/train/: 2083.txt  5593.txt  6410.txt  7487.txt  7731.txt  7780.txt  8081.txt  8337.txt  8457.txt  8519.txt  8554.txt  8597.txt  8610.txt  8671.txt  8712.txt  8810.txt
sample_data/labels/val/: 8875.txt  8902.txt  8935.txt  8947.txt  8950.txt  8955.txt  8971.txt  8976.txt
tests/: __init__.py  test_yolo.py
torchyolo/: __about__.py  trainer.py
torchyolo/yolo/: loss.py  validator.py  yolo11_model.py  yolo_v11_module.py
torchyolo/yolo/data/: dataset.py
torchyolo/yolo6D/: head.py  loss.py  tal.py  utils.py  yolo6d_model.py  yolo6d_module.py
torchyolo/yolo6D/data/: dataset.py  evaluate.py  features.py  lm_epi.ipynb  lmo_episode.py  vis.py
